# smlcli

./: AGENTS.md  AI_IMPLEMENTATION_DOC_STANDARD.md  BUILD_GUIDE.md  CHANGELOG.md  Cargo.toml  DESIGN_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  README.md  audit_roadmap.md  build.rs  build.sh  clippy.txt  designs.md  patch_registry  patch_registry.rs  patch_registry_2  patch_registry_2.rs  scratch.py  scratch.rs  scratch2.py  spec.md
.github/workflows/: ci.yml  release.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-14.jsonl  tmux-hook-2026-04-15.jsonl  tmux-hook-2026-04-16.jsonl  tmux-hook-2026-04-17.jsonl  tmux-hook-2026-04-18.jsonl  tmux-hook-2026-04-20.jsonl  tmux-hook-2026-04-21.jsonl  turns-2026-04-14.jsonl  turns-2026-04-15.jsonl  turns-2026-04-16.jsonl  turns-2026-04-17.jsonl  turns-2026-04-18.jsonl  turns-2026-04-20.jsonl  turns-2026-04-21.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
scripts/: check-version-sync.sh  mock_mcp_server.py
src/: main.rs
src/app/: action.rs  chat_runtime.rs  command_router.rs  event_loop.rs  mod.rs  state.rs  tool_runtime.rs  wizard_controller.rs
src/domain/: error.rs  mod.rs  permissions.rs  provider.rs  questionnaire.rs  repo_map.rs  session.rs  settings.rs  tool_result.rs
src/infra/: config_store.rs  doctor.rs  git_engine.rs  mcp_client.rs  mod.rs  process_reaper.rs  sandbox.rs  secret_store.rs  session_log.rs  workspace_utils.rs
src/providers/: anthropic.rs  mod.rs  registry.rs  types.rs
src/tests/: audit_regression.rs  mod.rs  (+3 more)
(+22 files in other folders)
