[package]
name = "smlcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
getrandom = "0.4.2"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
similar = "3.1.0"
sysinfo = "0.38.4"
thiserror = "2.0.11"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
async-trait = "0.1.89"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1.9"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
